--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 	info.update = function (props) {
 		this._div.innerHTML = '<h4 class="pull-right">Community Assets</h4>' + buttons +   (props ?
 			'<span class="pull-right"><b>' + props.Asset + '</b><br />' + props.Name + '</span>'
-			: '<span class="pull-right">Hover over a school or hospital</span>');
+			: '<span class="pull-right"></span>');
 	};
 
 	info.addTo(map);
